# esp32c6-test

./: Cargo.toml  info.txt
.cargo/: config.toml
